// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spacing deve renderizar corretamente 1`] = `
.emotion-0 {
  margin-top: 1rem;
  margin-right: 2rem;
  margin-bottom: 3rem;
  margin-left: 4rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  class="emotion-0"
>
  Content
</div>
`;

exports[`Spacing deve renderizar corretamente 2`] = `
.emotion-0 {
  margin-top: 1rem;
  margin-right: 2rem;
  margin-bottom: 3rem;
  margin-left: 4rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  class="emotion-0"
>
  Content
</div>
`;
